prover-ray/zkcdriver/testdata/synced/invalid/type_02.zkc
//error:3:19-20:expected type bool
type bool = u1
const TRUE:bool = 2